wip: Working on replacement data sync. fix: Fixed decoration screen showing always all tabs fixed: Multi-blocks not always opening screen from base