@@ -1,25 +1,27 @@
 package the_fireplace.caterpillar.common.block.util;
 
 import net.minecraft.network.chat.Component;
+import net.minecraft.network.chat.MutableComponent;
 import net.minecraft.world.level.block.Block;
 import net.minecraft.world.level.block.Blocks;
+import the_fireplace.caterpillar.Caterpillar;
 
 import java.util.Collections;
 import java.util.List;
 
 public enum Replacement {
-    AIR(0, Component.translatable("replacement.air"), List.of(Blocks.AIR)),
-    WATER(1, Component.translatable("replacement.water"), List.of(Blocks.WATER)),
-    LAVA(2, Component.translatable("replacement.lava"), List.of(Blocks.LAVA)),
-    FALLING_BLOCKS(3, Component.translatable("replacement.falling_blocks"), List.of(Blocks.SAND, Blocks.GRAVEL)),
-    ALL(4, Component.translatable("replacement.all"), Collections.emptyList());
+    WATER(0, Component.translatable("gui." + Caterpillar.MOD_ID + ".replacement.water"), List.of(Blocks.WATER)),
+    LAVA(1, Component.translatable("gui." + Caterpillar.MOD_ID + ".replacement.lava"), List.of(Blocks.LAVA)),
+    FALLING_BLOCKS(2, Component.translatable("gui." + Caterpillar.MOD_ID + ".replacement.falling_blocks"), List.of(Blocks.SAND, Blocks.GRAVEL)),
+    AIR(3, Component.translatable("gui."  + Caterpillar.MOD_ID + ".replacement.air"), List.of(Blocks.AIR)),
+    ALL(4, Component.translatable("gui." + Caterpillar.MOD_ID + ".replacement.all"), Collections.emptyList());
 
     public final int INDEX;
-    public final Component NAME;
+    public final MutableComponent NAME;
 
     public final List<Block> BLOCKS;
 
-    Replacement(int index, Component name, List<Block> blocks) {
+    Replacement(int index, MutableComponent name, List<Block> blocks) {
         this.INDEX = index;
         this.NAME = name;
         this.BLOCKS = blocks;
